<resources>
    <string name="app_name">CustomPolyline2</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome">Welcome to custom Polygons!</string>
    <string name="startPolygon">Make Polygon out of it!</string>
    <string name="startPolyline">Make Polyline out of it!</string>
    <string name="stop">Finish</string>
    <string name="title_activity_custom_polyline2">CustomPolyline2Activity</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="add">Add something new</string>
    <string-array name="options">
        <item>Polygon</item>
        <item>Polyline</item>
        <item>Point of Interest</item>
        <item>Ground Overlay</item>
    </string-array>
    <string name="title_activity_drawing_maps">Map</string>
    <string name="ok">OK! Store this!</string>
    <string name="empty"></string>
    <string name="create">Create Layer!</string>
    <string name="showShapes">Show Shapes on this layer!</string>
    <string name="finished">Finished Drawing!</string>
    <string name="showShapesAtLayer">Show Shapes a layer</string>
    <string name="whereFrom">From where should your image be?</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
